--- a/style.css
+++ b/style.css
@@ -27,6 +27,9 @@ body{
     border-radius: 1rem;
     border-style: none;
     background-color:  #B4E1FF;
+    box-shadow: 0 10px 10px 0 rgba(0,0,10,0.5);
+    font-size: 4.5rem;
+    color:rgb(220, 20, 103);
 }
 #resetBtn{
     font-size: 1.2rem;
@@ -34,4 +37,5 @@ body{
     border-radius: 1rem;
     border-style: none;
     background-color:#FFACE4;
+    box-shadow: 0 10px 10px rgba(0,0,10,0.5);
 }
